--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
     "frontmatter-markdown-loader": "^1.8.0",
     "gray-matter": "^4.0.2",
     "pluralize": "^8.0.0"
+  },
+  "devDependencies": {
+    "rollup": "^1.20.0",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-vue": "^5.0.1",
+    "vue": "^2.6.10"
   }
 }
