--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pluralize": "^8.0.0"
   },
   "devDependencies": {
+    "generate-changelog": "^1.8.0",
     "rollup": "^1.20.0",
     "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-vue": "^5.0.1",
