--- a/package.json
+++ b/package.json
@@ -37,10 +37,24 @@
   "dependencies": {
     "frontmatter-markdown-loader": "^1.8.0",
     "gray-matter": "^4.0.2",
-    "pluralize": "^8.0.0"
+    "lodash.assign": "^4.2.0",
+    "lodash.merge": "^4.6.2",
+    "lodash.omit": "^4.5.0",
+    "pluralize": "^8.0.0",
+    "yaml": "^1.6.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "generate-changelog": "^1.8.0",
+    "mocha": "^6.2.0",
     "rollup": "^1.20.0",
     "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-vue": "^5.0.1",
