--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "frontmatter-markdown-loader": "^1.8.0",
     "gray-matter": "^4.0.2",
+    "js-yaml-loader": "^1.2.2",
     "lodash.assign": "^4.2.0",
     "lodash.merge": "^4.6.2",
     "lodash.omit": "^4.5.0",
